--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             class="w-32 h-32 mx-auto mb-6 rounded-full overflow-hidden shadow-2xl border-4 border-white"
           >
             <img
-              src="/assets/img/perfil.jpg"
+              src="/assets/img/perfil.png"
               alt="Foto João Gabriel"
               class="w-full h-full object-cover"
             />
@@ -87,19 +87,19 @@
         </p>
         <div class="flex justify-center space-x-6 mb-12">
           <a
-            href="#"
+            href="https://github.com/jgmouradev"
             class="p-3 bg-white rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300 hover:scale-110 transform"
           >
             <i data-lucide="github" class="text-slate-700 w-6 h-6"></i>
           </a>
           <a
-            href="#"
+            href="https://www.linkedin.com/in/jo%C3%A3ogabrielgon%C3%A7alves/"
             class="p-3 bg-white rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300 hover:scale-110 transform"
           >
             <i data-lucide="linkedin" class="text-slate-700 w-6 h-6"></i>
           </a>
           <a
-            href="#"
+            href="mailto:devjoaogabrielgoncalves@gmail.com "
             class="p-3 bg-white rounded-full shadow-lg hover:shadow-xl transition-shadow duration-300 hover:scale-110 transform"
           >
             <i data-lucide="mail" class="text-slate-700 w-6 h-6"></i>
@@ -203,7 +203,7 @@
               >
                 <div class="flex space-x-3">
                   <a
-                    href="#"
+                    href="https://github.com/jgmouradev/CycleTech"
                     class="p-2 bg-white/90 rounded-full hover:bg-white transition-colors"
                   >
                     <i data-lucide="github" class="w-4 h-4"></i>
@@ -235,10 +235,7 @@
                   class="px-3 py-1 bg-blue-50 text-blue-600 text-sm rounded-full"
                   >Tailwind CSS</span
                 >
-                <span
-                  class="px-3 py-1 bg-blue-50 text-blue-600 text-sm rounded-full"
-                  >Node.js</span
-                >
+                
               </div>
             </div>
           </div>
@@ -250,7 +247,7 @@
             <div class="relative overflow-hidden">
               <img
                 src="./assets/img/brasilviagens.jpg"
-                alt="Dashboard Analytics"
+                alt="Imagem do site Brasil Viagens"
                 class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300"
               />
               <div
@@ -258,7 +255,7 @@
               >
                 <div class="flex space-x-3">
                   <a
-                    href="#"
+                    href="https://github.com/jgmouradev/Brasil-Turismo"
                     class="p-2 bg-white/90 rounded-full hover:bg-white transition-colors"
                   >
                     <i data-lucide="github" class="w-4 h-4"></i>
@@ -311,7 +308,7 @@
               >
                 <div class="flex space-x-3">
                   <a
-                    href="#"
+                    href="https://github.com/jgmouradev/Personal-Trainer-Landing-Page"
                     class="p-2 bg-white/90 rounded-full hover:bg-white transition-colors"
                   >
                     <i data-lucide="github" class="w-4 h-4"></i>
@@ -338,15 +335,11 @@
                 >
                 <span
                   class="px-3 py-1 bg-blue-50 text-blue-600 text-sm rounded-full"
-                  >Redux</span
+                  >TypeScript</span
                 >
                 <span
                   class="px-3 py-1 bg-blue-50 text-blue-600 text-sm rounded-full"
-                  >Styled Components</span
-                >
-                <span
-                  class="px-3 py-1 bg-blue-50 text-blue-600 text-sm rounded-full"
-                  >Express</span
+                  >Tailwind CSS</span
                 >
               </div>
             </div>
