--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>João Gabriel - Desenvolvedor Front-end</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+      <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
@@ -20,7 +23,7 @@
     >
       <div class="max-w-6xl mx-auto px-6 py-4">
         <div class="flex justify-between items-center">
-          <div class="text-2xl font-bold text-slate-800">
+          <div class=" hero text-2xl font-bold text-slate-800">
             Front-end Developer<span class="text-blue-600">.</span>
           </div>
           <div class="hidden md:flex space-x-8">
@@ -72,7 +75,7 @@
             <img
               src="/assets/img/perfil.png"
               alt="Foto João Gabriel"
-              class="w-full h-full object-cover"
+              class="w-full h-full object-cover "
             />
           </div>
         </div>
@@ -308,13 +311,13 @@
               >
                 <div class="flex space-x-3">
                   <a
-                    href="https://github.com/jgmouradev/Personal-Trainer-Landing-Page"
+                    href="https://github.com/jgmouradev/Personal-Trainer"
                     class="p-2 bg-white/90 rounded-full hover:bg-white transition-colors"
                   >
                     <i data-lucide="github" class="w-4 h-4"></i>
                   </a>
                   <a
-                    href="#"
+                    href="https://jgmouradev.github.io/Personal-Trainer/"
                     class="p-2 bg-white/90 rounded-full hover:bg-white transition-colors"
                   >
                     <i data-lucide="external-link" class="w-4 h-4"></i>
@@ -331,11 +334,11 @@
               <div class="flex flex-wrap gap-2">
                 <span
                   class="px-3 py-1 bg-blue-50 text-blue-600 text-sm rounded-full"
-                  >React</span
+                  >CSS</span
                 >
                 <span
                   class="px-3 py-1 bg-blue-50 text-blue-600 text-sm rounded-full"
-                  >TypeScript</span
+                  >Javascript</span
                 >
                 <span
                   class="px-3 py-1 bg-blue-50 text-blue-600 text-sm rounded-full"
