Ajuste na foto de perfil

--- a/index.html
+++ b/index.html
@@ -72,11 +72,7 @@
           <div
             class="w-32 h-32 mx-auto mb-6 rounded-full overflow-hidden shadow-2xl border-4 border-white"
           >
-            <img
-              src="/assets/img/perfil.png"
-              alt="Foto João Gabriel"
-              class="w-full h-full object-cover "
-            />
+            <img src="assets/img/perfil.png" alt="Foto João Gabriel" class="w-full h-full object-cover"/>
           </div>
         </div>
         <h1
@@ -212,7 +208,7 @@
                     <i data-lucide="github" class="w-4 h-4"></i>
                   </a>
                   <a
-                    href="https://pkwfjuid.manus.space/"
+                    href="https://jgmouradev.github.io/CycleTech/#/home"
                     class="p-2 bg-white/90 rounded-full hover:bg-white transition-colors"
                   >
                     <i data-lucide="external-link" class="w-4 h-4"></i>
