--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div
             class="w-32 h-32 mx-auto mb-6 rounded-full overflow-hidden shadow-2xl border-4 border-white"
           >
-            <img src="assets/img/perfil.png" alt="Foto João Gabriel" class="w-full h-full object-cover"/>
+            <img src="assets/img/perfil.jpg" alt="Foto João Gabriel" class="w-full h-full object-cover"/>
           </div>
         </div>
         <h1
